# dialog-integrations

./: Makefile  cli.py  pyproject.toml  settings.py
.github/workflows/: ci.yml  integrate.yml
api/: spec.json
integrations/: __init__.py  shared.py
integrations/cd_72_sarthes/: main.py
integrations/co_brest/: integration.py  schema.py
integrations/dp_sarthes/: integration.py  schema.py
integrations/dp_sarthes/tests/: data.csv
tests/: test_brest_preprocessing.py  test_sarthes_preprocessing.py
