[project]
name = "dialog-integrations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.2",
    "ipdb>=0.13.13",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "openapi>=2.0.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "shapely>=2.1.2",
    "tabulate>=0.9.0",
]
